# fuzzing-harnesses

./: CMakeLists.txt  README.md  README2.md  caffeine_main.c  setup.sh  vcpkg.json
cmake/: BitcodeUtils.cmake  ConfigureCompiler.cmake  cc.sh.in
libpng/: CMakeLists.txt  caffeine_dummy.c  read_fuzzer.c  read_fuzzer.cpp  setup.sh  vcpkg.json
miniz/: CMakeLists.txt
zlib/: CMakeLists.txt  caffeine_main.c  example_small_fuzzer.c  inflate_fuzzer.c  setup.sh  vcpkg.json  zbuild.h
